2018-07-16  6.9.10-7 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-7, GIT revision 13676:dab6babe2:20180716.

2018-07-15  6.9.10-7 Cristy  <quetzlzacatenango@image...>
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).

2018-07-08  6.9.10-6 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-6, GIT revision 13660:181df547c:20180708.

2018-07-08  6.9.10-6 Cristy  <quetzlzacatenango@image...>
  * Improve SVG support for tspan element.
  * Add support for -fx image.extent.

2018-07-04  6.9.10-5 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-5, GIT revision 13643:fe71cc8b2:20180704.

2018-07-04  6.9.10-5 Cristy  <quetzlzacatenango@image...>
  * Fixed a few potential memory leaks (reference
    https://github.com/ImageMagick/ImageMagick/issues).

2018-07-02  6.9.10-4 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-4, GIT revision 13635:c1c026715:20180702.

2018-06-28  6.9.10-4 Cristy  <quetzlzacatenango@image...>
  * Small tweaks to compile under Cygwin.
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).
  * Support %B property, the image file size without any decorations.

2018-06-24  6.9.10-3 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-3, GIT revision 13618:69366aab3:20180624.

2018-06-18  6.9.10-2 Cristy  <quetzlzacatenango@image...>
  * More rovust SVG text handling.

2018-06-16  6.9.10-1 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-1, GIT revision 13595:dafb03062:20180616.

2018-06-16  6.9.10-1 Cristy  <quetzlzacatenango@image...>
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).
  * Fixed an issue with stroke and label: (reference
